<resources>
    <string name="app_name">Insta Project</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!-- bottom nav -->
    <string name="text_home">Home Fragment</string>
    <string name="text_notifications">Notifications Fragment</string>
    <string name="text_search">Search Fragment</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_notifications">Notifications</string>

    <string name="user_name_hint">Username</string>
    <string name="password_text_hint">Password</string>
    <string name="forget_password_text_hint">Forget your password?</string>
    <string name="login_text_hint">Login</string>
    <string name="create_account_text_hint">Have not account yet? create account</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="nameerror">Enter a valid password and must be at least 6 characters</string>
    <string name="invalid_input_error">This Field is required</string>
    <string name="login_error_title">Login Error</string>
    <string name="login_error_msg">Sorry! Your email or password is not vaild. Please try again later.</string>
    <string name="invalid_email_error">Invalid Email Address</string>
    <string name="register_error_title">Signup Error</string>
    <string name="register_error_msg">Can\'t create account right now, maybe this email used before. Please try again with another one.</string>
    <string name="default_description">Short discription for project</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_hint">Sign up</string>
    <string name="have_account_text_hint">Already have account? Login</string>
    <string name="menu_profile">Profile</string>
    <string name="action_add_project">Add new Project</string>
    <string name="project_content_hint">Write a description for your project</string>
    <string name="save_text">Save</string>
    <string name="grant_text">Grant</string>
    <string name="storage_permission_mesg">This app need permissions for storage in order to get the files you want to use in the app.</string>
    <string name="storage_permission_title">Needed Permission</string>
    <string name="select_image">Select image from</string>
    <string name="search_hint">Search for person or project</string>

</resources>
