<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".Activities.CreateProjectActivity">

    <ImageView
        android:id="@+id/main_projectImage"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_add_image"
        android:scaleType="fitXY"/>

    <ImageView
        android:id="@+id/second_projectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_add_image"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:layout_below="@+id/main_projectImage"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_below="@id/main_projectImage"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/second_projectImage"
        android:id="@+id/third_projectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_add_image"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:layout_marginTop="10dp"/>

    <ImageView
        android:layout_below="@id/main_projectImage"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/third_projectImage"
        android:id="@+id/last_projectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_add_image"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:layout_marginTop="10dp"/>
    <EditText
        android:id="@+id/ed_project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_below="@id/second_projectImage"
        android:layout_marginTop="15dp"
        android:minLines="1"
        android:minHeight="100dp"
        android:hint="@string/project_content_hint"
        />

    <Button
        android:layout_below="@id/ed_project_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnstyle"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/save_text"/>

</RelativeLayout>
